--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.18'
 	implementation 'org.projectlombok:lombok:1.18.18'
 	implementation 'org.projectlombok:lombok:1.18.18'
+	implementation 'javax.inject:javax.inject:1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 test {
